breedsName = "Breeds";
favoritesName = "Favorites";
notDescription = "This dog has no description";
lifeSpan = "Life span:";
weight = "Weight:";
height = "Height:";
addFavorites = "♡ ADD TO FAVORITES";
removeFavorites = "♡ REMOVE TO FAVORITES";
entityName = "BreedEntity";
iconList = "list.dash";
iconFavorite = "heart";
messageError = "Connection error";
email = "Email";
login = "Log In";
emptyMessage = "Please fill in the email field";
