...
        var label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
        label.textColor = .black
        label.font = UIFont.systemFont(ofSize: 14)
        label.numberOfLines = 0
        label.textAlignment = .justified
        label.accessibilityIdentifier = "description-text"
        return label
    }()
    
    let lifeSpan: UILabel = {
        var label = PaddingLabel(top: 8, bottom: 8, left: 8, right: 8)
        label.textColor = .white
...
        button.addTarget(self, action: #selector(DetailsView.pressedFavorite), for: .touchUpInside)
        button.layer.cornerRadius = 12
        button.layer.borderWidth = 1
        button.layer.borderColor = UIColor.lightGray.cgColor
        button.clipsToBounds = true
        button.heightAnchor.constraint(equalToConstant: 45).isActive = true
        button.accessibilityIdentifier = "button-favorite"
        return button
    }()

    private let stackContentView: UIStackView = {
        var stack = UIStackView()
        stack.translatesAutoresizingMaskIntoConstraints = false
...
